exercicios da aula

--- a/Exercícios/exercicioES6.html
+++ b/Exercícios/exercicioES6.html
@@ -19,8 +19,7 @@
         const obterNomesEstudantes = () => estudantes.forEach(estudante => `Nome do estudante: ${estudante.nome}`);
 
         //  OU 
-
-        const obterNomesEstudantes = () => estudantes.map(estudante => `Nome do estudante: ${estudante.nome}`);
+        //const obterNomesEstudantes = () => estudantes.map(estudante => `Nome do estudante: ${estudante.nome}`);
 
         // Cria uma arrow function que devolva todos os estudantes que tenham uma idade maior do que 
         // um valor passado por parâmetro
