fiz ex de avaliaçao final 3 e melhorei os outros ex de avaliaçao

--- a/Avaliação /ExercicioFinalAvaliacao/ExFinal.html
+++ b/Avaliação /ExercicioFinalAvaliacao/ExFinal.html
@@ -45,9 +45,7 @@
             }
 
             getAllProductsNames() {
-                const allProductsNames = this.productsList.map((product) => {
-                    return product.name;
-                });
+                const allProductsNames = this.productsList.map((product) => product.name);
                 return allProductsNames;
             }
 
