--- a/Avaliação /ExercicioFinalAvaliacao/ExFinal2.html
+++ b/Avaliação /ExercicioFinalAvaliacao/ExFinal2.html
@@ -7,25 +7,39 @@
 </head>
 <body>
     <script>
-        const motherDiv = document.createElement('div');
-        motherDiv.classList.add('products');
-        document.body.append(motherDiv);
+        const productsDiv = document.createElement('div');
+        productsDiv.classList.add('products');
+        document.body.append(productsDiv);
+
+        // creating the date of today
+        function getDate() {
+            const todayDate = new Date();
+            const todayYear = todayDate.getFullYear();
+            const todayMonthRaw = todayDate.getMonth();
+            const todayMonth = todayMonthRaw + 1; 
+            const todayDayDate = todayDate.getDate();
+            return `${todayYear}-${todayMonth}-${todayDayDate}`;
+        }
 
         fetch('https://fakestoreapi.com/products')
             .then((response) => response.json())
             .then((productsArray) => {
                 console.log(productsArray);
                 productsArray.forEach((product) => {
-                    const daughterDiv = document.createElement('div');
-                    daughterDiv.classList.add('product');
-                    const listUL = document.createElement('ul');
-                    daughterDiv.appendChild(listUL);
-                    listUL.innerHTML = `<h2>${product.title}</h2><img src=${product.image} alt=”imagem do produto” width=100 height=80>`;
-                    motherDiv.appendChild(daughterDiv);
+                    // Creating product div item
+                    const productDiv = document.createElement('div');
 
-                    const addToCartButton = document.createElement('button');
+                    // add product class to div
+                    productDiv.classList.add('product');
+
+                    // include title and image to product item
+                    productDiv.innerHTML = `<h2>${product.title}</h2><img src=${product.image} alt=”imagem do produto” width=100 height=80>`;
+
+                    // creating Add to Cart button
+                     const addToCartButton = document.createElement('button');
                     addToCartButton.textContent = "Add to Cart";
-                    daughterDiv.appendChild(addToCartButton);
+
+                    // include click event listener on Add to cart button
                     addToCartButton.addEventListener('click', () => {
                         fetch("https://fakestoreapi.com/carts/7", {
                             method: 'PUT', 
@@ -37,12 +51,23 @@
                             },
                             redirect: 'follow', 
                             referrerPolicy: 'no-referrer', 
-                            body: JSON.stringify(data) 
+                            body: JSON.stringify({
+                                userId: 123,
+                                date: getDate(),
+                                products: [{productId: product.id, quantity: 1}]
+                            }) 
                             })
                         .then((response) => response.json())
-                    })
+                    });
+
+                    // add it to the product item div
+                    productDiv.appendChild(addToCartButton);
+                    
+                    // include the product item on products list div
+                    productsDiv.appendChild(productDiv);
                 })
             })   
+            
     </script>
 </body>
 </html>
